tests/reference/ast_new-global1-38edfbd.stderr
syntax error: Token '' (of type 'dedent') is unexpected here
  --> tests/parser/global1.py:10:4
   |
10 |     inner()
   |    ^ 
